--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -27,21 +27,26 @@ center {
 }
 
 .change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-    transform: rotate(-45deg) translate(-9px, 6px) ;
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+    background-color: white;
 }
 
-.change .bar2 {opacity: 0;}
+.change .bar2 {
+    opacity: 0;
+}
 
 .change .bar3 {
     -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
     transform: rotate(45deg) translate(-8px, -8px) ;
+    background-color: white;
+    
 }
+
 .body {
     width: 100%;
     height: 1000px;
     display: flex;
-    border: solid 1px red;
 }
 .all {
     width: 100%;
@@ -72,4 +77,19 @@ textarea {
     width: 350px;
     max-width: 350px;
     max-height: 100px;
+}
+.essai {
+    width: 50px;
+    height: 50px;
+    display: block;
+}
+.volet {
+    width: 0;
+    height: 100%;
+    transition: width 0.6s ease-in-out, background-color 0.6s ease-in-out;
+}
+.voley { 
+    width: 200px;
+    display: block;
+    background-color: black;
 }
