correctif navbar, profile 19/9/17-19:4:33

--- a/front/src/Navbar.css
+++ b/front/src/Navbar.css
@@ -43,6 +43,7 @@
     background-color: #071D40;
     color: white;
     position: absolute;
+    z-index: 10;
 }
 .all_word_volet {
     display: flex;
