--- a/front/src/Navbar.css
+++ b/front/src/Navbar.css
@@ -58,7 +58,7 @@
     align-items: center;
     font-size: 25px;
     width: auto;
-    height: 5vw;
+    height: 42px;
     min-height: 30px;
     color: white;
     text-align: right;
