--- a/front/src/card.css
+++ b/front/src/card.css
@@ -7,8 +7,6 @@
     justify-content: center;
 }
 .body_profile {
-    height: 60%;
-    /* width: 500px; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -36,10 +34,13 @@
 
 }
 .photo {
-    width: 40px;
-    height: 150px;
-    min-width: 115px;
-    background-color: white;
+    background-color: white;    
+    overflow: hidden;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
 }
 .card {
     margin: auto;
@@ -62,7 +63,7 @@
     height: 200px;
     width: 380px;
     border-radius: 10px;
-    border: solid 1px red;    
+    margin-top: 10px;
     background-color: white;
     display: flex;
     align-items: center;
@@ -88,11 +89,12 @@
     background-color: white;
     border-radius: 10px;
     height: 50%;
-    min-height: 500px;
+    min-height: 550px;
     width: 50%;
     min-width: 160px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
