--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -142,7 +142,7 @@ textarea {
     align-items: center;
 }
 .searchProfile {
-    border: solid 1px red;
-    width: 100%;
     background-color: white;
+    text-align: center;
+    border-radius: 10px;
 }
