--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -42,27 +42,25 @@ textarea {
     height: 100vh;
     width: 100vw;
     padding: 50px;
-    overflow: hidden;
+    overflow: auto;
 }
-/* .multiProfile{
+.multiProfile{
     height: 400px;
     width: 250px;
     background-color: white;
     border-radius: 10px;
-} */
+}
 .photoProfileMulti{
     display: flex;
-    height: 40%;
+    height: auto;
     width: 100%;
-    border: solid 1px black;
     justify-content: center;
     align-items: center;
 }
 .descriProfilMulti{
     display: flex;
-    height: 60%;
+    height: auto;
     width: 100%;
-    border: solid 1px black;
     flex-direction: column;
     justify-content: center;
     align-items: center;    
@@ -145,4 +143,5 @@ textarea {
     background-color: white;
     text-align: center;
     border-radius: 10px;
+    margin-bottom: 15px;
 }
