--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -49,6 +49,7 @@ textarea {
     width: 250px;
     background-color: white;
     border-radius: 10px;
+    margin: 10px;
 }
 .photoProfileMulti{
     display: flex;
@@ -79,11 +80,14 @@ textarea {
     min-width: 300px;
     display: flex;
     height: auto;
-    width: 60%;
+    width: auto;
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
     background-color: white;
+    padding: 10px;
+    overflow: auto;
+    border-radius: 10px;
 }
 .detailProfileUser{
     display: flex;
@@ -144,4 +148,8 @@ textarea {
     text-align: center;
     border-radius: 10px;
     margin-bottom: 15px;
+}
+.resultProfile {
+    display: flex;
+    flex-wrap: wrap;
 }
