--- a/front/src/Navbar.css
+++ b/front/src/Navbar.css
@@ -189,3 +189,15 @@
 .test{
     height: 5vh;
 }
+.word_volet_true {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    width: auto;
+    height: 42px;
+    min-height: 30px;
+    color: red;
+    text-align: right;
+    padding: auto;
+}
