--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -153,3 +153,30 @@ textarea {
     display: flex;
     flex-wrap: wrap;
 }
+.bodyNotification {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+}
+.notification {
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    padding: 15px;
+    height: auto;
+    width: auto;
+}
+.allNotification {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+}
+.bodyMessenger {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+}
