--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -179,4 +179,72 @@ textarea {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
+    padding: 50px;
+    align-items: center;
+}
+.cadreApercu {
+    display: flex;
+    height: 100px;
+    width: 600px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    background-color: white;
+    border-radius: 10px;
+}
+.bodyMessage {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+.conversation {
+    margin: auto;
+    border: solid 1px red;
+    height: 90%;
+    width: 70%;
+}
+.UserDescription {
+    height: 100px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.UserMessage {
+    width: 100%;
+    height: 900px;
+}
+.cadreMessage {
+    height: 88%;
+    display: flex;
+    border: solid 1px red;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.cadreSendMessage {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: solid 1px red;
+}
+.inputMessage {
+    width: 100%;
+    height: 65px;
+}
+.discution {
+    height: 95%;
+    width: 95%;
+    border: solid 1px red;
+    border-radius: 10px;
+    margin: auto;
+    
+}
+.notMessage {
+    height: 100px;
+    text-align: center;
 }
