--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -9,6 +9,10 @@ center {
     height: 100vh;
     display: flex;
 }
+
+#root {
+    font-size: 1rem;
+}
 .Signup {
     margin: auto;
     text-align: center;
@@ -197,64 +201,89 @@ textarea {
 .bodyMessage {
     height: 100vh;
     width: 100vw;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .conversation {
+    background-color: white; 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     margin: auto;
-    border: solid 1px red;
-    height: 90%;
+    height: 100%;
     width: 70%;
+    border-radius: 3px;
 }
 .UserDescription {
-    height: 100px;
-    width: 100%;
-    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5%;
 }
 .UserMessage {
     width: 100%;
     height: 900px;
 }
 .cadreMessage {
-    height: 88%;
+    height: 85%;
     display: flex;
-    border: solid 1px red;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    padding: 5px;
 }
 .cadreSendMessage {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border: solid 1px red;
+    height: 10%;
+    padding: 5px;
 }
 .inputMessage {
+    height: 50%;
     width: 100%;
-    height: 65px;
+}
+.inputMessage1 {
+    height: 100%;
+    width: 100%;
+}
+.buttonSend {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .discution {
-    height: 95%;
-    width: 95%;
-    border: solid 1px red;
+    height: 100%;
+    width: 100%;
+    border: solid 1px grey;
+    padding: 5px;
     border-radius: 3px;
-    margin: auto;
-    overflow: auto; 
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .notMessage {
     height: 100px;
     text-align: center;
 }
 .convUserOther {
-    margin-top: 10px;
+    margin: 10px;
+    margin-right: 25%;
+    width: 100%;
     background-color: grey;
+    border-radius: 3px;
+    padding:5px;
+    text-align: left;
 }
 .convUserLogin {
-    margin: 10px;  
+    margin: 10px;
+    margin-left: 25%;
+    width: 100%;
+    display: flex;
+    text-align: right;
+    margin-left: 25%;
     background-color: #1DE9B6;
     border-radius: 3px;
-    text-align: right;
+    max-width: 75%;
+    overflow-x: hidden;
+    padding: 5px;
 }
