--- a/front/src/StyleSheet.css
+++ b/front/src/StyleSheet.css
@@ -166,7 +166,7 @@ textarea {
     display: flex;
     background-color: white;
     border-radius: 10px;
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: auto;
